@@ -54,10 +54,10 @@ Per registrarsi al supporto e attivare i diritti di supporto, un utente del prop
 Se sei un cliente NetApp con un account NSS, devi semplicemente registrarti per ricevere supporto tramite BlueXP.
 
 .Fasi
-. Nella parte superiore destra della console BlueXP, fare clic sull'icona Impostazioni e selezionare *credenziali*.
-. Fare clic su *User Credentials* (credenziali utente).
+. Nella parte superiore destra della console BlueXP, selezionare l'icona Impostazioni e selezionare *credenziali*.
+. Selezionare *User Credentials* (credenziali utente).
 . Selezionare *Aggiungi credenziali NSS* e seguire la richiesta di autenticazione del sito di supporto NetApp.
-. Per confermare che la procedura di registrazione è stata eseguita correttamente, fare clic sull'icona Guida e selezionare *supporto*.
+. Per confermare che la procedura di registrazione è stata eseguita correttamente, selezionare l'icona Guida e selezionare *supporto*.
 +
 La pagina *risorse* dovrebbe mostrare che il tuo account è registrato per il supporto.
 
@@ -92,7 +92,7 @@ Se sei un cliente NetApp con licenze e numeri di serie esistenti ma _no_ account
 Se sei nuovo di NetApp e non disponi di un account NSS, segui i passaggi riportati di seguito.
 
 .Fasi
-. Nella parte superiore destra della console BlueXP, fare clic sull'icona Guida e selezionare *supporto*.
+. Nella parte superiore destra della console BlueXP, selezionare l'icona della Guida e selezionare *supporto*.
 +
 image:https://raw.githubusercontent.com/NetAppDocs/bluexp-family/main/media/screenshot-help-support.png["Schermata del menu Help (Guida) in cui Support (Assistenza) è la prima opzione elencata"]
 
@@ -150,12 +150,12 @@ Queste credenziali NSS sono associate all'ID account BlueXP specifico. Gli utent
 
 
 .Fasi
-. Nella parte superiore destra della console BlueXP, fare clic sull'icona Guida e selezionare *supporto*.
+. Nella parte superiore destra della console BlueXP, selezionare l'icona della Guida e selezionare *supporto*.
 +
 image:https://raw.githubusercontent.com/NetAppDocs/bluexp-family/main/media/screenshot-help-support.png["Schermata del menu Help (Guida) in cui Support (Assistenza) è la prima opzione elencata"]
 
-. Fare clic su *Gestione NSS > Aggiungi account NSS*.
-. Quando richiesto, fare clic su *Continue* per essere reindirizzati a una pagina di accesso Microsoft.
+. Selezionare *Gestione NSS > Aggiungi account NSS*.
+. Quando richiesto, selezionare *continua* per essere reindirizzato a una pagina di accesso Microsoft.
 +
 NetApp utilizza Microsoft Azure Active Directory come provider di identità per i servizi di autenticazione specifici per il supporto e la concessione di licenze.
 
